Fix to java 8