@@ -1,6 +1,7 @@
 package fr.uge.ifshare.database;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -16,7 +17,7 @@ public class ClientWaitListDB {
 		if (!waitListMap.containsKey(productType)) {
 			waitListMap.put(productType, new ArrayList<Long>());
 		}
-		this.waitListMap.merge(productType, List.of(idClient), (list, elem) -> {
+		this.waitListMap.merge(productType, Arrays.asList(idClient), (list, elem) -> {
 			list.addAll(elem);
 			return list;
 		});
@@ -32,7 +33,7 @@ public class ClientWaitListDB {
 	public void removeClientFromWaitList(ProductDB productDB, long productId, long idClient) {
 		String typeProduct = productDB.getProductById(productId).get().getType();
 		if(isClientWaitingForProduct(typeProduct, idClient)) {
-			this.waitListMap.merge(typeProduct, List.of(idClient), (list, elem) -> {
+			this.waitListMap.merge(typeProduct, Arrays.asList(idClient), (list, elem) -> {
 				list.removeAll(elem);
 				return list;
 			});
@@ -43,7 +44,7 @@ public class ClientWaitListDB {
 		if(this.waitListMap.containsKey(productType)) {
 			return this.waitListMap.get(productType);
 		} else {
-			return List.of();
+			return Arrays.asList();
 		}
 	}
 	
